Problema de 4 campos arreglada
